--- a/src/global.scss
+++ b/src/global.scss
@@ -41,6 +41,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background: linear-gradient(white,grey),url("./pages/noise.svg");
 }
 
 /* A elements that don't have a class get default styles */
