--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -13,3 +13,38 @@
   cursor: pointer;
   border-radius: 50%;
 }
+
+.roundedEdges{
+  margin: 0;
+  padding: 0;
+  height: 40px;
+  width: 40px;
+  background-color: var(--primary-color);
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  // margin: 0 4px;
+  cursor: pointer;
+  border-radius: 10px;
+  
+}
+
+.inner{
+  display: inline-block;
+}
+
+
+
+#changeSeconds{
+  height: 100px;
+  width: 150px;
+  float: right;
+  //display: inline-block;
+  color: red;
+  position: absolute;
+  right: 0px;
+  width: 100%;
+}
+
