--- a/src/global.scss
+++ b/src/global.scss
@@ -38,6 +38,7 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
