--- a/src/components/throwtimer/css.module.scss
+++ b/src/components/throwtimer/css.module.scss
@@ -1,6 +1,6 @@
 .rightAlign{
     position: relative;
-    left: 175px;
+    left: 250px;
     width: 100%;
   }
 
@@ -24,4 +24,11 @@
     // margin: 0 4px;
     cursor: pointer;
     border-radius: 50%;
+  }
+
+  .centerAlign{
+      position:relative;
+      left: 50px;
+      top: 50px;
+      width: 100%;
   }
