--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -28,6 +28,8 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 10px;
+  position: relative;
+  left: 35px
   
 }
 
@@ -54,10 +56,10 @@
 
 .resetTimer{
   font-size: 12px;
-  margin: 0;
+  margin: 0px;
   padding: 0;
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
   background-color: var(--primary-color);
   border: none;
   color: white;
@@ -67,6 +69,8 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 50%;
+  position:relative;
+  left:22px;
 }
 
 
@@ -86,4 +90,21 @@
   cursor: pointer;
   border-radius: 50%;
   
+}
+
+
+.stopTimer {
+  margin: 0;
+  padding: 0;
+  height: 40px;
+  width: 40px;
+  background-color: var(--primary-color);
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  // margin: 0 4px;
+  cursor: pointer;
+  border-radius: 50%;
 }
