--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -3,7 +3,7 @@
   padding: 0;
   height: 40px;
   width: 40px;
-  background-color: var(--primary-color);
+  background-color: rgba(23,23,23,255);
   border: none;
   color: white;
   text-align: center;
@@ -12,6 +12,9 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 50%;
+  box-shadow: -1px 1px 5px -2px white inset;
+
+  
 }
 
 .roundedEdges{
@@ -19,7 +22,7 @@
   padding: 0;
   height: 40px;
   width: 40px;
-  background-color: var(--primary-color);
+  background-color: rgba(23,23,23,255);
   border: none;
   color: white;
   text-align: center;
@@ -29,8 +32,8 @@
   cursor: pointer;
   border-radius: 10px;
   position: relative;
-  left: 35px
-  
+  left: 35px;
+  box-shadow: -1px 1px 5px -2px white inset;
 }
 
 .inner{
@@ -42,7 +45,7 @@
   padding: 0;
   height: 70px;
   width: 70px;
-  background-color: var(--primary-color);
+  background-color: rgba(23,23,23,255);
   border: none;
   color: white;
   text-align: center;
@@ -51,6 +54,8 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 50%;
+  box-shadow: -1px 1px 4px -1px white inset;
+
 }
 
 
@@ -60,7 +65,7 @@
   padding: 0;
   height: 45px;
   width: 45px;
-  background-color: var(--primary-color);
+  background-color: rgba(23,23,23,255);
   border: none;
   color: white;
   text-align: center;
@@ -71,6 +76,8 @@
   border-radius: 50%;
   position:relative;
   left:22px;
+  box-shadow: -1px 1px 5px -2px white inset;
+
 }
 
 
@@ -80,8 +87,10 @@
   padding: 0;
   height: 200px;
   width: 200px;
-  background-color: var(--primary-color);
-  border: none;
+  background-color: rgba(23,23,23,255);
+  border: black;
+  border-style: groove;
+  border-width: 3px;
   color: white;
   text-align: center;
   text-decoration: none;
@@ -89,6 +98,12 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 50%;
+  //box-shadow: -1px -1px 5px -2px white inset;
+  box-shadow: -1px 1px 5px -2px white inset;
+
+  //box-shadow: 5px -5px 5px 2px black inset;
+ 
+
   
 }
 
@@ -98,7 +113,7 @@
   padding: 0;
   height: 40px;
   width: 40px;
-  background-color: var(--primary-color);
+  background-color: rgba(23,23,23,255);
   border: none;
   color: white;
   text-align: center;
