--- a/src/components/team/css.module.scss
+++ b/src/components/team/css.module.scss
@@ -9,6 +9,10 @@
 .divStyle{
     display: inline-block;
     background: rgb(179, 229, 248);
+    box-shadow: 3px -2px 7px rgba(0,0,0,.25) inset,
+     -3px 5px 7px white inset,
+     //-10px 0px 5px 0px white inset,
+     
 }
 .divBevel{
     box-shadow: inset -2px -2px 10px;
@@ -18,7 +22,7 @@
     padding: 0;
     height: 40px;
     width: 40px;
-    background-color: var(--primary-color);
+    background-color: rgba(23,23,23,255);
     border: none;
     color: white;
     text-align: center;
