--- a/src/components/throwtimer/css.module.scss
+++ b/src/components/throwtimer/css.module.scss
@@ -15,7 +15,7 @@
     padding: 0;
     height: 40px;
     width: 40px;
-    background-color: var(--primary-color);
+    background-color: rgba(23,23,23,255);
     border: none;
     color: white;
     text-align: center;
