Fine tuned the noisy gradient background

--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -12,7 +12,7 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 50%;
-  box-shadow: -1px 1px 5px -2px white inset;
+  //box-shadow: -1px 1px 5px -2px white inset;
 
   
 }
@@ -54,7 +54,7 @@
   // margin: 0 4px;
   cursor: pointer;
   border-radius: 50%;
-  box-shadow: -1px 1px 4px -1px white inset;
+  box-shadow: -1px 1px 3px -1px white inset;
 
 }
 
@@ -99,7 +99,8 @@
   cursor: pointer;
   border-radius: 50%;
   //box-shadow: -1px -1px 5px -2px white inset;
-  box-shadow: -1px 1px 5px -2px white inset;
+  //box-shadow: -1px 1px 5px -2px white inset;
+  box-shadow: -2px 2px 4px -2px white inset;
 
   //box-shadow: 5px -5px 5px 2px black inset;
  
