--- a/src/components/team/css.module.scss
+++ b/src/components/team/css.module.scss
@@ -3,10 +3,10 @@
     text-align: center;
 }
 
-.inner {
+.inner { //makes the elements appear in one line together
     display: inline-block
 }
-.divStyle{
+.divStyle{ //sets the background colour and box shadow
     display: inline-block;
     background: rgb(179, 229, 248);
     box-shadow: 3px -2px 7px rgba(0,0,0,.25) inset,
@@ -17,24 +17,8 @@
 .divBevel{
     box-shadow: inset -2px -2px 10px;
 }
-.roundedEdges{
-    margin: 0;
-    padding: 0;
-    height: 40px;
-    width: 40px;
-    background-color: rgba(23,23,23,255);
-    border: none;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    display: block;
-    // margin: 0 4px;
-    cursor: pointer;
-    border-radius: 10px;
-    
-  }
-  
-  .h1{
+
+  .h1{ //style for Team One/Two text
       display: block;
       background-color: black;
       color: white;
