--- a/src/global.scss
+++ b/src/global.scss
@@ -39,11 +39,15 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
+  //The noise.svg file helps add the noisy/grainy filter
+  filter: blur(0.30px);
+  background-blend-mode:multiply;
   border-style: inset;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  min-height: 100vh;
+  min-height: 150vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  backdrop-filter: contrast(1.23);
   background: linear-gradient(white,grey),url("./pages/noise.svg");
 }
 
@@ -83,47 +87,8 @@ select {
   }
 }
 
-//Visual CSS code exports
-//Used an extension to generate these for specific elements
-.body container div:nth-child(1) > div:nth-child(2){
-  width:100px;
-  margin-right:19px;
-  transform:translatex(6px) translatey(4px);
-  filter: blur(0.34px);
-   background-blend-mode:overlay;
 
 
- }
-
- .body div div:nth-child(1) .css-module--circular--lCBsb{
-  margin-right:52px;
- }
-
- .body container > div{
-  transform:translatex(0px) translatey(0px);
- }
- 
- /* Button */
- .body div .css-module--circular--lCBsb{
-  margin-right:58px !important;
-  width:100%;
- }
-
- container div div div:nth-child(1) .css-module--circular--lCBsb{
-  text-decoration: underline;
-  text-underline-offset: 15px;
- }
- 
- /* Division */
- .body container div:nth-child(1) > div:nth-child(1){
-  min-height:75px;
-  transform:translatex(9px) translatey(-19px);
- }
- 
- /* Heading */
- .body div div h1{
-  transform:translatex(0px) translatey(10px);
- }
  
 
- 
+
