Hardcoded plus and minus signs from screenshots

--- a/src/components/team/css.module.scss
+++ b/src/components/team/css.module.scss
@@ -37,3 +37,11 @@
       justify-content: center;
   }
   
+.scoreButtonDivImg {
+    width: 85%;
+    height:30px;
+    transform: translatex(2px);
+    position:relative;
+    left:1px;
+    border-radius: 50%;
+}
