Style adjustments for signing in and out

--- a/src/components/SignInButton/signInDiv.scss
+++ b/src/components/SignInButton/signInDiv.scss
@@ -4,8 +4,9 @@
       padding-left: 42px;
       padding-right: 28px;
       border-radius: 3px;
-      border: thick solid red;
+      border: thick solid;
       height: 120px;
+      background-color: rgb(255, 255, 255);
       font-size: 14px;
       font-weight: bold;
       /* Use the Roboto font that is loaded in the <head> */
