--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -171,13 +171,14 @@
 }
 
 .signInButton{
+  display: flexbox;
+  margin-top: 15px;
   transition: background-color .3s, box-shadow .3s;
-    
   padding: 12px 16px 12px 42px;
   border: none;
   border-radius: 3px;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
-  
+  vertical-align: middle;
   font-size: 14px;
   font-weight: 500;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
@@ -202,4 +203,20 @@
       0 2px 4px rgba(0, 0, 0, .25),
       0 0 0 3px #c8dafc;
   }
+}
+
+.signOutButton{
+  margin: 5px;
+  padding: 0;
+  height: 40px;
+  width: 100px;
+  background-color: rgba(23,23,23,255);
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 10px;
+  position: relative;
+  box-shadow: -1px 1px 5px -2px white inset;
 }
