Change location button added, refactored changeTeamNames

--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -220,3 +220,9 @@
   position: relative;
   box-shadow: -1px 1px 5px -2px white inset;
 }
+
+.changeNames{
+  padding: 3px 0px 0 5px;
+  border: thick solid green;
+
+}
