Lifted state up to parent
Synchronized state for team scores, and the logged in user, so that they can be uploaded to the database

--- a/src/components/gameclock/css.module.scss
+++ b/src/components/gameclock/css.module.scss
@@ -27,3 +27,11 @@
     transform:translatex(8px) translatey(10px);
 }
 
+.halfTimeDiv{
+    border: thick solid red;
+    border-bottom: 0px;
+    background-color: white;
+    margin-left: 50px;
+    margin-right: 50px;
+    
+}
