--- a/src/components/SignInButton/signInDiv.scss
+++ b/src/components/SignInButton/signInDiv.scss
@@ -1,5 +1,8 @@
 #SignInDiv{
-  display: inline-block;
+  
+  justify-content: center;
+  margin-left: 50px;
+  margin-right: 50px;
       vertical-align: middle;
       padding-left: 42px;
       padding-right: 28px;
@@ -7,11 +10,13 @@
       border: thick solid;
       height: 120px;
       background-color: rgb(255, 255, 255);
-      font-size: 14px;
+      font-size: 0.8em;
       font-weight: bold;
       /* Use the Roboto font that is loaded in the <head> */
       font-family: 'Roboto', sans-serif;
-      transform:translatex(300px) translatey(-227px);
+       transform:translatex(0px) translatey(0px);
+
+       
 }
 
 
