--- a/src/components/SignInButton/signOutDiv.css
+++ b/src/components/SignInButton/signOutDiv.css
@@ -1,12 +1,16 @@
 #signOutDiv{
-    transform:translatex(300px) translatey(-227px);
-    display: flex;
+    transform:translatex(0px) translatey(0px);
+    /* display: flex; */
     vertical-align: middle;
-    padding-left: 42px;
+    /* padding-left: 42px; */
     padding-right: 28px;
+    padding-top: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
     border-radius: 3px;
     border: thick solid;
     background-color: white;
+    border-top: 0px;
     height: 120px;
     font-size: 14px;
     font-weight: bold;
