--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -172,14 +172,14 @@
 
 .signInButton{
   display: flexbox;
-  margin-top: 15px;
+  margin-top: 8px;
   transition: background-color .3s, box-shadow .3s;
   padding: 12px 16px 12px 42px;
   border: none;
   border-radius: 3px;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, .04), 0 1px 1px rgba(0, 0, 0, .25);
   vertical-align: middle;
-  font-size: 14px;
+  font-size: 0.8em;
   font-weight: 500;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
   
