--- a/src/components/match/matchSettings.module.scss
+++ b/src/components/match/matchSettings.module.scss
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: center;
     border: solid thick black;
-    min-height: 150px;
+    min-height: 100px;
+    background-color: white;
+    
     
 }
