--- a/src/components/gameclock/css.module.scss
+++ b/src/components/gameclock/css.module.scss
@@ -6,12 +6,12 @@
     justify-content: center;
     padding-left: 33px;
     width:113px;
-    font-size: 18px;;
-    transform:translatex(122px) translatey(-65px);
+    transform:translatex(100px) translatey(-65px);
+   
 }
 
 .h1{
-    transform:translatex(0px) translatey(10px);
+
     font-size: 36px;
     
 }
@@ -33,6 +33,7 @@
     display: inline-block;
     border:  solid rgb(0, 0, 0);
     background-color: white;
+    font-size: 0.8em;
     
     
 }
@@ -50,6 +51,14 @@
         max-width: 280px;
         //
     }
+
+    .timersDiv{
+        font-size: 18px;
+    }
+    .h1{
+        font-size: 36px;
+    }
+
 
 }
 @media (min-width: 600px){
