--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -7,9 +7,21 @@
   display: inline-block;
   border: thick solid orange;
   min-width: 280px;
+  justify-content: center;
     
 
 }
+
+
+.teamDiv{
+  display: inline-block;
+  border: thick solid lime;
+  width: auto;
+  height: auto;
+
+
+}
+
 
 /*
  style={{
