--- a/src/components/team/css.module.scss
+++ b/src/components/team/css.module.scss
@@ -1,6 +1,7 @@
 .buttonDivStyle{
     display: flex;
     justify-content: center;
+    
 }
 .divStyle{ //sets the background colour and box shadow
     min-height: 100px;
@@ -17,7 +18,7 @@
 }
 
   .p{ //style for Team One/Two text
-      font-size: 24px;
+      font-size: 1.1em;
       display: block;
       background-color: black;
       color: white;
