--- a/src/components/throwtimer/css.module.scss
+++ b/src/components/throwtimer/css.module.scss
@@ -11,14 +11,12 @@
     
   }
 
-  .countdownTimer{
+  .countdownTimerDiv{
     font-size: 50px;
     //color: red;
   }
 
   .centerAlign{
       position:relative;
-      left: 50px;
-      top: 50px;
       width: 100%;
   }
