--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -18,6 +18,25 @@
   
 }
 
+.roundedEdges{
+  background-color: rgba(23,23,23,255);
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 5px;
+  &:hover{
+    box-shadow: 0 5px 15px 4px rgb(255, 255, 255);
+  }
+
+
+    //
+  
+
+}
+
+
+
 .scoreButton{
   margin: 10px;
   padding: 0;
@@ -202,6 +221,7 @@
       0 2px 4px rgba(0, 0, 0, .25),
       0 0 0 3px #c8dafc;
   }
+
 }
 
 .signOutButton{
