--- a/src/components/SignInButton/signInPage.scss
+++ b/src/components/SignInButton/signInPage.scss
@@ -1,10 +1,11 @@
 #SignInDiv{
-  min-width: 173px;
+  min-width: 203px;
   display: inline-block;
+  border: solid;
   justify-content: center;
+  text-align: center;
       vertical-align: middle;
       border-radius: 3px;
-      border: thick solid;
       border-bottom: 0px;
       background-color: rgb(255, 255, 255);
       font-size: 0.8em;
@@ -31,12 +32,12 @@
 
 #signOutDiv{
   display: inline-block;
-  min-width: 173px;
+  min-width: 203px;
+  border: solid;
   transform:translatex(0px) translatey(0px);
   vertical-align: middle;
   margin-right: 50px;
   border-radius: 3px;
-  border: thick solid;
   background-color: white;
   font-size: 0.8em;
   font-weight: bold;
