--- a/src/components/gameclock/css.module.scss
+++ b/src/components/gameclock/css.module.scss
@@ -30,8 +30,8 @@
 }
 
 .halfTimeDiv{
+    border: solid;
     display: inline-block;
-    border:  solid rgb(0, 0, 0);
     background-color: white;
     font-size: 0.8em;
     
