--- a/src/components/match/matchSettings.module.scss
+++ b/src/components/match/matchSettings.module.scss
@@ -1,15 +1,11 @@
 .Settings{
     display: inline-block;
     justify-content: center;
-    border: solid thick black;
     border-top: 0px;
     min-height: 100px;
     background-color: white;
+    border: solid;
     
-}
-
-.changeNameDiv{
-    transform: translatey(50px);
 }
 
 .locationDiv{
