--- a/src/components/database/dataTable.module.scss
+++ b/src/components/database/dataTable.module.scss
@@ -21,6 +21,6 @@ tr{
     background-Color: white;
 }
 tr:nth-child(even){
-    background-color: rgb(109, 250, 139);
+    background-color: var(--secondary-color);
 
 }
