--- a/src/components/SignInButton/signInPage.scss
+++ b/src/components/SignInButton/signInPage.scss
@@ -1,5 +1,5 @@
 #SignInDiv{
-  min-width: 203px;
+  min-width: 209px;
   display: inline-block;
   border: solid;
   justify-content: center;
@@ -13,33 +13,33 @@
       /* Use the Roboto font that is loaded in the <head> */
       font-family: 'Roboto', sans-serif;
        transform:translatex(0px) translatey(0px);
+       background: var(--secondary-color);
+       box-shadow: 3px -2px 7px rgba(0,0,0,.25) inset,
+    -3px 5px 7px white inset;
 
        
 }
 
-@media (width > 420px){
-  #SignInDiv{
-    padding-left: 42px;
-    padding-right: 28px;
+@media(min-width: 600px){
+  #signOutDiv,#SignInDiv{
+    margin-top: 5px;
   }
-
-  #signOutDiv{
-    padding-right: 28px;
-    padding-top: 10px;
-  }
+  
 }
 
-
 #signOutDiv{
+  text-align: center;
   display: inline-block;
-  min-width: 203px;
+  min-width: 209px;
   border: solid;
   transform:translatex(0px) translatey(0px);
   vertical-align: middle;
   margin-right: 50px;
   border-radius: 3px;
-  background-color: white;
+  background-color: var(--secondary-color);
   font-size: 0.8em;
   font-weight: bold;
   font-family: 'Roboto', sans-serif;
+  box-shadow: 3px -2px 7px rgba(0,0,0,.25) inset,
+    -3px 5px 7px white inset;
 }
