--- a/src/components/database/dataTable.css
+++ b/src/components/database/dataTable.css
@@ -2,3 +2,8 @@ td{
     border: 1px solid;
     justify-content: center;
 }
+
+th{
+    border: 1px solid;
+    background: var(--secondary-color);
+}
