--- a/src/components/team/css.module.scss
+++ b/src/components/team/css.module.scss
@@ -7,7 +7,7 @@
     min-height: 100px;
     min-width: 150px;
     display: inline-block;
-    background: rgb(179, 229, 248);
+    background: var(--secondary-color);
     box-shadow: 3px -2px 7px rgba(0,0,0,.25) inset,
      -3px 5px 7px white inset,
      //-10px 0px 5px 0px white inset,
