--- a/src/global.scss
+++ b/src/global.scss
@@ -2,6 +2,10 @@
 :root {
   --primary-color: hsla(0, 0%, 0%);
   --secondary-color: hsla(203, 98%, 84%);
+  --tertiary-color:   #f67373;
+  --boxShadow: 3px -2px 7px rgba(0,0,0,.25) inset,
+  -3px 5px 7px white inset,
+
 }
 
 /* Box sizing rules */
@@ -41,6 +45,7 @@ body {
   border: thick solid red;
   //The noise.svg file helps add the noisy/grainy filter
   filter: blur(0.34px);
+  padding-left: 7px;
   background-blend-mode:multiply;
   border-style: inset;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
