Added confirm prompt, responsiveness to deleting

--- a/src/components/database/dataTable.module.scss
+++ b/src/components/database/dataTable.module.scss
@@ -27,5 +27,12 @@ tr:nth-child(even){
 
 .redText{
     color: red;
-    cursor: pointer;
+    cursor: pointer; 
+
+}
+
+.redTextCell{
+    &:hover{
+        backdrop-filter: brightness(55%);
+    }
 }
