--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -273,6 +273,7 @@
   padding: 0;
   height: 40px;
   width: 100px;
+  letter-spacing: 1px;
   background-color: rgba(23, 23, 23, 255);
   border: none;
   color: white;
