Fixed centering issue

--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -159,7 +159,7 @@
 
 .resetTimer {
   //sets style for resetTimer button
-  font-size: 12px;
+  font-size: 0.7em;
   margin: 0px;
   padding: 0;
   height: 45px;
