--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -13,11 +13,15 @@
 .main {
   display: flex;
   justify-content: center;
-  text-align: center;
   max-width: 850px;
   min-width: 280px;
 }
 
+@media (max-width: 600px) {
+  .main {
+    text-align: center;
+  }
+}
 @media (min-width: 600px) {
   .main {
     font-size: 1.2em;
