--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -128,6 +128,9 @@
   border-radius: 10px;
   position: relative;
   box-shadow: -1px 1px 5px -2px white inset;
+  &:focus {
+    animation: none;
+  }
 }
 
 .scoreButton:focus-within {
