--- a/src/components/team/css.module.scss
+++ b/src/components/team/css.module.scss
@@ -1,41 +1,38 @@
-.buttonDivStyle{
-    display: flex;
-    justify-content: center;
-    
+.buttonDivStyle {
+  display: flex;
+  justify-content: center;
 }
-.divStyle{ //sets the background colour and box shadow
-    min-height: 100px;
-    min-width: 150px;
-    display: inline-block;
-    background: var(--secondary-color);
-    box-shadow: 3px -2px 7px rgba(0,0,0,.25) inset,
-     -3px 5px 7px white inset,
-     //-10px 0px 5px 0px white inset,
-     
+.divStyle {
+  //sets the background colour and box shadow
+  min-height: 100px;
+  min-width: 150px;
+  display: inline-block;
+  background: var(--secondary-color);
+  box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 7px white inset;
+  //-10px 0px 5px 0px white inset,
 }
-.divBevel{
-    box-shadow: inset -2px -2px 10px;
+.divBevel {
+  box-shadow: inset -2px -2px 10px;
 }
 
-  .p{ //style for Team One/Two text
-      font-size: 1.1em;
-      display: block;
-      background-color: black;
-      color: white;
-      margin: 5px;
-      margin-left: 15px;
-      margin-right: 15px;
-      padding: 3px;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-  }
-  
+.p {
+  //style for Team One/Two text
+  font-size: 1.1em;
+  display: block;
+  background-color: black;
+  color: white;
+  margin: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 3px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
 .scoreButtonDivImg {
-    width: 85%;
-    height:30px;
-    transform: translatex(2px);
-    position:relative;
-    left:1px;
-    border-radius: 50%;
+  width: 70%;
+  height: 70%;
+  position: relative;
+  top: 2px;
 }
