--- a/src/components/throwtimer/css.module.scss
+++ b/src/components/throwtimer/css.module.scss
@@ -1,22 +1,34 @@
-.throwTimerDiv{
+.throwTimerDiv {
   height: auto;
   max-width: 600px;
-
 }
 
-.rightAlign{
-    position: relative;
+.changeSecondsDiv {
+  position: relative;
+  display: flex;
+  max-width: 300px;
+  justify-content: right;
+}
+
+.countdownTimerDiv {
+  font-size: 50px;
+  //color: red;
+}
+
+.countdownTimerDiv {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 700px) {
+  .countdownTimerDiv {
     display: flex;
-    max-width: 300px;
-    justify-content: right;    
+    justify-content: center;
   }
 
-  .countdownTimerDiv{
-    font-size: 50px;
-    //color: red;
+  .changeSecondsDiv {
+    margin-right: 45px;
+    margin-left: auto;
   }
-
-  .centerAlign{
-      position:relative;
-      width: 100%;
-  }
+}
