--- a/src/components/SignInButton/signInPage.scss
+++ b/src/components/SignInButton/signInPage.scss
@@ -1,19 +1,14 @@
 #SignInDiv {
-  min-width: 219px;
+  margin: -3px 5px;
   display: inline-block;
-  border: solid;
   justify-content: center;
   text-align: center;
   vertical-align: middle;
-  border-radius: 3px;
-  border-bottom: 0px;
-  background-color: rgb(255, 255, 255);
   font-size: 0.8em;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
   transform: translatex(0px) translatey(0px);
-  background: var(--secondary-color);
-  box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 7px white inset;
+  background: transparent;
 }
 
 @media (min-width: 600px) {
@@ -24,16 +19,14 @@
 }
 
 #signOutDiv {
-  text-align: center;
+  margin: -3px 5px;
   display: inline-block;
-  min-width: 219px;
-  border: solid;
-  transform: translatex(0px) translatey(0px);
+  justify-content: center;
+  text-align: center;
   vertical-align: middle;
-  border-radius: 3px;
-  background-color: var(--secondary-color);
   font-size: 0.8em;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
-  box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 7px white inset;
+  transform: translatex(0px) translatey(0px);
+  background: transparent;
 }
