--- a/src/components/button/css.module.scss
+++ b/src/components/button/css.module.scss
@@ -240,22 +240,26 @@
 }
 
 .signInButton {
-  margin: 8px;
+  margin: 4px;
+  margin-top: 2px;
   border: none;
   transition: background-color 0.3s, box-shadow 0.3s;
-  padding: 12px 16px 12px 42px;
   border-radius: 3px;
+  padding-left: 40px;
+  padding-right: 25px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  font-weight: 500;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.04), 0 1px 1px rgba(0, 0, 0, 0.25);
   vertical-align: middle;
-  font-size: 0.8em;
-  font-weight: 500;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg);
+  background-size: 20px 35px;
   background-color: rgba(255, 255, 255, 0.775);
   background-repeat: no-repeat;
-  background-position: 12px 11px;
+  background-position: 7px 1px;
 
   &:active {
     background-color: #eeeeee;
@@ -270,9 +274,9 @@
 
 .signOutButton {
   margin: 5px;
-  padding: 0;
-  height: 40px;
-  width: 100px;
+  padding: 2px;
+  padding-left: 15px;
+  padding-right: 15px;
   letter-spacing: 1px;
   background-color: rgba(23, 23, 23, 255);
   border: none;
@@ -280,7 +284,8 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 5px;
+  font-weight: 550;
   position: relative;
   box-shadow: -1px 1px 5px -2px white inset;
 }
