--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -4,6 +4,18 @@
   justify-content: center;
 }
 
+.navBar {
+  min-height: 70px;
+  background-color: var(--secondary-color);
+  box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 7px white inset;
+  border: solid;
+  text-align: left;
+  margin-bottom: 5px;
+}
+.navBar > ul {
+  padding: 2px;
+  list-style: none;
+}
 .teamDiv {
   display: inline-block;
   width: auto;
