--- a/src/components/match/matchSettings.module.scss
+++ b/src/components/match/matchSettings.module.scss
@@ -1,10 +1,17 @@
 .Settings {
+  position: relative;
   text-align: center;
-  display: inline-block;
   justify-content: center;
   border-top: 0px;
-  min-height: 100px;
-  background-color: var(--secondary-color);
-  border: solid;
-  box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 7px white inset;
+  background-color: transparent;
+}
+
+.matchSettings {
+  width: 100%;
+  border: solid red;
+}
+
+.h1 {
+  display: flex;
+  justify-content: center;
 }
