Dropdown menu for settings buttons
Also added clock icon to half time button
And added grid template for the game Clock component for better alignment

--- a/src/components/gameclock/css.module.scss
+++ b/src/components/gameclock/css.module.scss
@@ -1,5 +1,8 @@
 .gameClockDiv {
   max-width: 600px;
+  display: grid;
+  grid-template-columns: 50% 30%;
+  gap: 15px;
 }
 
 .timersDiv {
@@ -7,43 +10,38 @@
   border-style: solid;
   background-color: black;
   display: inline-block;
-  justify-content: center;
   padding-left: 33px;
   margin-right: auto;
   width: 113px;
   transform: translatex(100px) translatey(-65px);
 }
 
-.timersClockDiv {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
 .h1 {
   font-size: 36px;
   transform: translatey(7px);
+  text-align: center;
 }
 .clockDiv {
   display: inline-block;
   height: 75px;
   width: 150px;
-  text-align: center;
   background-color: white;
   border-color: black;
   border-style: solid;
   border-width: 5px;
 
-  transform: translatex(-40px) translatey(10px);
+  transform: translatex(0px) translatey(10px);
 }
 
 .halfTimeDiv {
+  display: inline-block;
   text-align: center;
   border: solid;
-  display: inline-block;
   background-color: var(--secondary-color);
   font-size: 0.8em;
   box-shadow: 3px -2px 7px rgba(0, 0, 0, 0.25) inset, -3px 5px 8px white inset;
-  min-width: 209px;
+  margin-left: 20px;
+  min-width: 150px;
 }
 
 .resetTimerDiv {
@@ -51,20 +49,10 @@
   position: relative;
   top: 0px;
   left: 10px;
+  grid-row: 2;
 }
 
-@media (min-width: 420px) {
-  .timersDiv {
-    font-size: 18px;
-  }
-  .h1 {
-    font-size: 36px;
-  }
-}
 @media (min-width: 600px) {
-  .halfTimeDiv {
-    transform: translatey(62px) translatex(330px);
-  }
   .gameClockDiv {
     max-height: 180px;
   }
